apps/obsidian/obsidian-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian
  annotations:
    argocd.argoproj.io/sync-wave: "1"
