apps/obsidian/obsidian-service.yml
apiVersion: v1
kind: Service
metadata:
  name: obsidian
  namespace: obsidian
  labels:
    app: obsidian
    app.kubernetes.io/name: obsidian
    argocd.argoproj.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: obsidian
