apps/obsidian/obsidian-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian
  namespace: obsidian
  labels:
    app: obsidian
    app.kubernetes.io/name: obsidian
    argocd.argoproj.io/managed-by: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - obsidian.i3sec.com.au
    secretName: obsidian-tls
  rules:
  - host: obsidian.i3sec.com.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: obsidian
            port:
              number: 8080
